[package]
name = "http-debug-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.98"
colored = "3.0.0"
dotenv = "0.15.0"
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
